[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Shooter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/spritesheet_big_fall.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Scripts/Pit_pulo.gd" type="Script" id=3]
[ext_resource path="res://Sprites/shadow.png" type="Texture" id=4]
[ext_resource path="res://Sprites/spritesheet_big_jump.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 66.0076

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 400, 400, 400 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 800, 400, 400 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 1200, 400, 400 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 1600, 400, 400 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 400, 400 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 800, 400, 400 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 400, 400 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1600, 400, 400 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2000, 400, 400 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 7 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "pulo",
"speed": 9.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "shadow",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "pouso",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 70.3021
height = 87.4427

[node name="pit_pulo" type="KinematicBody2D"]
position = Vector2( 524, 232 )
script = ExtResource( 3 )

[node name="Shooter" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.63, 0.63 )
frames = SubResource( 3 )
animation = "pouso"

[node name="Timer_Pulo" type="Timer" parent="."]

[node name="Lifespan" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Animacao_Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 11 )
rotation = -1.57726
shape = SubResource( 5 )

[connection signal="timeout" from="Timer_Pulo" to="." method="_on_Timer_Pulo_timeout"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
[connection signal="timeout" from="Animacao_Timer" to="." method="_on_Animacao_Timer_timeout"]
